--- a/quiz/m1_quant_basics/l3_market_mechanics/resample_data.ipynb
+++ b/quiz/m1_quant_basics/l3_market_mechanics/resample_data.ipynb
@@ -11,9 +11,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10     0\n",
+       "2018-10-11     1\n",
+       "2018-10-12     2\n",
+       "2018-10-13     3\n",
+       "2018-10-14     4\n",
+       "2018-10-15     5\n",
+       "2018-10-16     6\n",
+       "2018-10-17     7\n",
+       "2018-10-18     8\n",
+       "2018-10-19     9\n",
+       "2018-10-20    10\n",
+       "Freq: D, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -34,9 +56,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.resample.DatetimeIndexResampler object at 0x7fdff8632c40>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.resample('3D')"
    ]
@@ -50,11 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10     2\n",
+       "2018-10-13     5\n",
+       "2018-10-16     8\n",
+       "2018-10-19    10\n",
+       "Freq: 3D, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "close.resample('3D').first()"
+    "close.resample('3D').last()"
    ]
   },
   {
@@ -66,9 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10    0\n",
+       "2018-10-13    3\n",
+       "2018-10-16    6\n",
+       "2018-10-19    9\n",
+       "Freq: 3D, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.iloc[::3]"
    ]
@@ -84,9 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It threw a TypeError.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    # Attempt resample on a series without a time index\n",
@@ -106,9 +177,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>days</th>\n",
+       "      <th>weeks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-10-10</th>\n",
+       "      <td>0.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-11</th>\n",
+       "      <td>1.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-12</th>\n",
+       "      <td>2.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-13</th>\n",
+       "      <td>3.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-14</th>\n",
+       "      <td>4.00000000</td>\n",
+       "      <td>0.00000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-15</th>\n",
+       "      <td>5.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-16</th>\n",
+       "      <td>6.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-17</th>\n",
+       "      <td>7.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-18</th>\n",
+       "      <td>8.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-19</th>\n",
+       "      <td>9.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-20</th>\n",
+       "      <td>10.00000000</td>\n",
+       "      <td>nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-21</th>\n",
+       "      <td>nan</td>\n",
+       "      <td>5.00000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  days      weeks\n",
+       "2018-10-10  0.00000000        nan\n",
+       "2018-10-11  1.00000000        nan\n",
+       "2018-10-12  2.00000000        nan\n",
+       "2018-10-13  3.00000000        nan\n",
+       "2018-10-14  4.00000000 0.00000000\n",
+       "2018-10-15  5.00000000        nan\n",
+       "2018-10-16  6.00000000        nan\n",
+       "2018-10-17  7.00000000        nan\n",
+       "2018-10-18  8.00000000        nan\n",
+       "2018-10-19  9.00000000        nan\n",
+       "2018-10-20 10.00000000        nan\n",
+       "2018-10-21         nan 5.00000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame({\n",
     "    'days': close,\n",
@@ -126,9 +308,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-10-14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-10-21</th>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            open  high  low  close\n",
+       "2018-10-14     0     4    0      4\n",
+       "2018-10-21     5    10    5     10"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.resample('W').ohlc()"
    ]
@@ -146,9 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-14     4\n",
+       "2018-10-21    10\n",
+       "Freq: W-SUN, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "close.resample('W').last()"
    ]
@@ -163,9 +415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import quiz_tests\n",
     "\n",
@@ -196,9 +456,12 @@
     "        Weekly close prices for each ticker and date\n",
     "    \"\"\"\n",
     "    \n",
-    "    # TODO: Implement Function\n",
+    "    open_prices_weekly = open_prices.resample('W').first()\n",
+    "    high_prices_weekly = high_prices.resample('W').max()\n",
+    "    low_prices_weekly = low_prices.resample('W').min()\n",
+    "    close_prices_weekly = close_prices.resample('W').last()\n",
     "    \n",
-    "    return None, None, None, None\n",
+    "    return open_prices_weekly, high_prices_weekly, low_prices_weekly, close_prices_weekly\n",
     "\n",
     "\n",
     "quiz_tests.test_days_to_weeks(days_to_weeks)"
@@ -229,9 +492,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
