--- a/quiz/m1_quant_basics/l3_market_mechanics/resample_data_solution.ipynb
+++ b/quiz/m1_quant_basics/l3_market_mechanics/resample_data_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def days_to_weeks(open_prices, high_prices, low_prices, close_prices):\n",
     "    \"\"\"Converts daily OHLC prices to weekly OHLC prices.\n",
@@ -68,6 +76,13 @@
     "\n",
     "quiz_tests.test_days_to_weeks(days_to_weeks)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -86,9 +101,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
