--- a/quiz/m1_quant_basics/l2_stock_prices/stock_data_solution.ipynb
+++ b/quiz/m1_quant_basics/l2_stock_prices/stock_data_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def csv_to_close(csv_filepath, field_names):\n",
     "    \"\"\"Reads in data from a csv file and produces a DataFrame with close data.\n",
