--- a/quiz/m1_quant_basics/l3_market_mechanics/resample_data.ipynb
+++ b/quiz/m1_quant_basics/l3_market_mechanics/resample_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "Freq: D, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.resample.DatetimeIndexResampler object at 0x7fdff8632c40>"
+       "<pandas.core.resample.DatetimeIndexResampler object at 0x7ff9103e8af0>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "Freq: 3D, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
        "Freq: 3D, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,85 +208,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2018-10-10</th>\n",
-       "      <td>0.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-11</th>\n",
-       "      <td>1.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-12</th>\n",
-       "      <td>2.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-13</th>\n",
-       "      <td>3.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-14</th>\n",
-       "      <td>4.00000000</td>\n",
-       "      <td>0.00000000</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-15</th>\n",
-       "      <td>5.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-16</th>\n",
-       "      <td>6.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-17</th>\n",
-       "      <td>7.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-18</th>\n",
-       "      <td>8.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-19</th>\n",
-       "      <td>9.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-20</th>\n",
-       "      <td>10.00000000</td>\n",
-       "      <td>nan</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018-10-21</th>\n",
-       "      <td>nan</td>\n",
-       "      <td>5.00000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  days      weeks\n",
-       "2018-10-10  0.00000000        nan\n",
-       "2018-10-11  1.00000000        nan\n",
-       "2018-10-12  2.00000000        nan\n",
-       "2018-10-13  3.00000000        nan\n",
-       "2018-10-14  4.00000000 0.00000000\n",
-       "2018-10-15  5.00000000        nan\n",
-       "2018-10-16  6.00000000        nan\n",
-       "2018-10-17  7.00000000        nan\n",
-       "2018-10-18  8.00000000        nan\n",
-       "2018-10-19  9.00000000        nan\n",
-       "2018-10-20 10.00000000        nan\n",
-       "2018-10-21         nan 5.00000000"
+       "            days  weeks\n",
+       "2018-10-10   0.0    NaN\n",
+       "2018-10-11   1.0    NaN\n",
+       "2018-10-12   2.0    NaN\n",
+       "2018-10-13   3.0    NaN\n",
+       "2018-10-14   4.0    0.0\n",
+       "2018-10-15   5.0    NaN\n",
+       "2018-10-16   6.0    NaN\n",
+       "2018-10-17   7.0    NaN\n",
+       "2018-10-18   8.0    NaN\n",
+       "2018-10-19   9.0    NaN\n",
+       "2018-10-20  10.0    NaN\n",
+       "2018-10-21   NaN    5.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "2018-10-21     5    10    5     10"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "Freq: W-SUN, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,13 +415,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "            ACI  PMPJ  DTJ\n",
+      "2018-10-14   49    49   48\n",
+      "2018-10-21   49    49   49\n",
+      "2018-10-28   49    49   49\n",
+      "2018-11-04   49    49   49\n",
+      "2018-11-11   49    49   49\n",
       "Tests Passed\n"
      ]
     }
@@ -461,6 +467,7 @@
     "    low_prices_weekly = low_prices.resample('W').min()\n",
     "    close_prices_weekly = close_prices.resample('W').last()\n",
     "    \n",
+    "    print(high_prices_weekly)\n",
     "    return open_prices_weekly, high_prices_weekly, low_prices_weekly, close_prices_weekly\n",
     "\n",
     "\n",
