--- a/quiz/m2_advanced_quants/l5_volatility/rolling_windows.ipynb
+++ b/quiz/m2_advanced_quants/l5_volatility/rolling_windows.ipynb
@@ -16,9 +16,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2018-10-10     0\n",
+       "2018-10-11     1\n",
+       "2018-10-12     2\n",
+       "2018-10-13     3\n",
+       "2018-10-14     4\n",
+       "2018-10-15     5\n",
+       "2018-10-16     6\n",
+       "2018-10-17     7\n",
+       "2018-10-18     8\n",
+       "2018-10-19     9\n",
+       "2018-10-20    10\n",
+       "Freq: D, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -112,9 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    KTR        HBQS           YOB         JFJR        MTUR\n",
+      "2013-02-09          nan         nan           nan          nan         nan\n",
+      "2013-02-10          nan         nan           nan          nan         nan\n",
+      "2013-02-11 173.01063518 22.30232250 1179.62640322 184.46511965 12.80843788\n",
+      "2013-02-12 169.63334269 22.60058918 1184.23199044 184.87873990 11.99598671\n",
+      "2013-02-13 167.98009915 21.95354197 1184.38273374  33.47776934 14.67532669\n",
+      "2013-02-14  11.04680012 18.21317125   20.52709535  23.35331859 14.94211731\n",
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import quiz_tests\n",
     "\n",
@@ -134,12 +171,29 @@
     "    simple_moving_average : DataFrame\n",
     "        Simple moving average for each ticker and date\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
     "    \n",
-    "    return None\n",
+    "    print(close.rolling(window=rolling_window).mean())\n",
+    "    return close.rolling(window=rolling_window).mean()\n",
     "\n",
     "\n",
     "quiz_tests.test_calculate_simple_moving_average(calculate_simple_moving_average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `pd.ewm` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.ewm?"
    ]
   },
   {
@@ -167,9 +221,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
