--- a/project/project_1/project_1_starter.ipynb
+++ b/project/project_1/project_1_starter.ipynb
@@ -18,11 +18,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: colour==0.1.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 1)) (0.1.5)\n",
+      "Requirement already satisfied: cvxpy==1.0.3 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 2)) (1.0.3)\n",
+      "Requirement already satisfied: cycler==0.10.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 3)) (0.10.0)\n",
+      "Requirement already satisfied: plotly==2.2.3 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 6)) (2.2.3)\n",
+      "Requirement already satisfied: pyparsing==2.2.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 7)) (2.2.0)\n",
+      "Requirement already satisfied: python-dateutil==2.6.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 8)) (2.6.1)\n",
+      "Requirement already satisfied: pytz==2017.3 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 9)) (2017.3)\n",
+      "Requirement already satisfied: requests==2.18.4 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 10)) (2.18.4)\n",
+      "Requirement already satisfied: scipy==1.0.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 11)) (1.0.0)\n",
+      "Requirement already satisfied: scikit-learn==0.19.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 12)) (0.19.1)\n",
+      "Requirement already satisfied: six==1.11.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 13)) (1.11.0)\n",
+      "Requirement already satisfied: tqdm==4.19.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 14)) (4.19.5)\n",
+      "Requirement already satisfied: zipline==1.2.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 15)) (1.2.0)\n",
+      "Requirement already satisfied: fastcache in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (1.1.0)\n",
+      "Requirement already satisfied: scs>=1.1.3 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (2.1.2)\n",
+      "Requirement already satisfied: osqp in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (0.6.1)\n",
+      "Requirement already satisfied: ecos>=2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (2.0.7.post1)\n",
+      "Requirement already satisfied: toolz in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (0.11.1)\n",
+      "Requirement already satisfied: multiprocess in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from cvxpy==1.0.3->-r requirements.txt (line 2)) (0.70.11.1)\n",
+      "Collecting numpy==1.13.3\n",
+      "  Using cached numpy-1.13.3-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (4.5 MB)\n",
+      "Collecting pandas==0.21.1\n",
+      "  Using cached pandas-0.21.1-cp36-cp36m-macosx_10_6_intel.macosx_10_9_intel.macosx_10_9_x86_64.macosx_10_10_intel.macosx_10_10_x86_64.whl (14.9 MB)\n",
+      "Requirement already satisfied: decorator>=4.0.6 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from plotly==2.2.3->-r requirements.txt (line 6)) (4.4.2)\n",
+      "Requirement already satisfied: nbformat>=4.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from plotly==2.2.3->-r requirements.txt (line 6)) (5.0.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests==2.18.4->-r requirements.txt (line 10)) (2020.12.5)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests==2.18.4->-r requirements.txt (line 10)) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests==2.18.4->-r requirements.txt (line 10)) (1.22)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests==2.18.4->-r requirements.txt (line 10)) (3.0.4)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline==1.2.0->-r requirements.txt (line 15)) (1.1.3)\n",
+      "Requirement already satisfied: multipledispatch>=0.4.8 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline==1.2.0->-r requirements.txt (line 15)) (0.6.0)\n",
+      "Requirement already satisfied: Logbook>=0.12.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline==1.2.0->-r requirements.txt (line 15)) (1.5.3)\n",
+      "INFO: pip is looking at multiple versions of tqdm to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of six to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of scipy to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of scikit-learn to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of requests to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of pytz to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of python-dateutil to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of pyparsing to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of plotly to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of pandas to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of <Python from Requires-Python> to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of numpy to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of cycler to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of cvxpy to determine which version is compatible with other requirements. This could take a while.\n",
+      "INFO: pip is looking at multiple versions of colour to determine which version is compatible with other requirements. This could take a while.\n",
+      "\u001b[31mERROR: Cannot install pandas==0.21.1 and zipline==1.2.0 because these package versions have conflicting dependencies.\u001b[0m\n",
+      "\n",
+      "The conflict is caused by:\n",
+      "    The user requested pandas==0.21.1\n",
+      "    zipline 1.2.0 depends on pandas<0.19 and >=0.18.1\n",
+      "\n",
+      "To fix this you could try to:\n",
+      "1. loosen the range of package versions you've specified\n",
+      "2. remove package versions to allow pip attempt to solve the dependency conflict\n",
+      "\n",
+      "\u001b[31mERROR: ResolutionImpossible: for help visit https://pip.pypa.io/en/latest/user_guide/#fixing-conflicting-dependencies\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install -r requirements.txt"
@@ -37,11 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -63,7 +137,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -87,6 +164,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -106,7 +186,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -129,7 +212,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -169,7 +255,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -197,7 +286,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -234,7 +326,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -289,7 +384,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -328,7 +426,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -382,6 +483,9 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -421,7 +525,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -448,7 +555,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -491,7 +601,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -511,7 +624,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -549,7 +665,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -590,7 +709,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -641,9 +763,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
