--- a/quiz/m4_multifactor_models/Zipline Pipeline/Zipline Pipeline.ipynb
+++ b/quiz/m4_multifactor_models/Zipline Pipeline/Zipline Pipeline.ipynb
@@ -29,12 +29,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: zipline===1.2.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 1)) (1.2.0)\n",
+      "Requirement already satisfied: graphviz==0.9 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from -r requirements.txt (line 2)) (0.9)\n",
+      "Requirement already satisfied: intervaltree>=2.1.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (3.0.2)\n",
+      "Requirement already satisfied: statsmodels>=0.6.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.9.0)\n",
+      "Requirement already satisfied: decorator>=4.0.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (4.4.2)\n",
+      "Requirement already satisfied: click>=4.0.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (7.1.2)\n",
+      "Requirement already satisfied: pytz>=2016.4 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (2017.3)\n",
+      "Requirement already satisfied: empyrical>=0.4.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.5.5)\n",
+      "Requirement already satisfied: pandas-datareader<0.6,>=0.2.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.5.0)\n",
+      "Requirement already satisfied: patsy>=0.4.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.5.1)\n",
+      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.1.1)\n",
+      "Requirement already satisfied: cyordereddict>=0.2.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.0.0)\n",
+      "Requirement already satisfied: bcolz<1,>=0.12.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.12.1)\n",
+      "Requirement already satisfied: alembic>=0.7.7 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.4.3)\n",
+      "Requirement already satisfied: numpy>=1.11.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.16.1)\n",
+      "Requirement already satisfied: lru-dict>=1.1.4 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.1.6)\n",
+      "Requirement already satisfied: pip>=7.1.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (20.3.3)\n",
+      "Requirement already satisfied: multipledispatch>=0.4.8 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.6.0)\n",
+      "Requirement already satisfied: pandas<0.19,>=0.18.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.18.1)\n",
+      "Requirement already satisfied: bottleneck>=1.0.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.3.2)\n",
+      "Requirement already satisfied: Logbook>=0.12.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.5.3)\n",
+      "Requirement already satisfied: setuptools>18.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (51.0.0.post20201207)\n",
+      "Requirement already satisfied: sortedcontainers>=1.4.4 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (2.3.0)\n",
+      "Requirement already satisfied: contextlib2>=0.4.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.6.0.post1)\n",
+      "Requirement already satisfied: networkx<2.0,>=1.9.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.11)\n",
+      "Requirement already satisfied: requests>=2.9.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (2.18.4)\n",
+      "Requirement already satisfied: numexpr>=2.6.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (2.7.1)\n",
+      "Requirement already satisfied: tables>=3.3.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (3.6.1)\n",
+      "Requirement already satisfied: scipy>=0.17.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.0.0)\n",
+      "Requirement already satisfied: Cython>=0.25.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.29.21)\n",
+      "Requirement already satisfied: requests-file>=1.4.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.5.1)\n",
+      "Requirement already satisfied: toolz>=0.8.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (0.11.1)\n",
+      "Requirement already satisfied: sqlalchemy>=1.0.8 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.3.22)\n",
+      "Requirement already satisfied: python-dateutil>=2.4.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (2.6.1)\n",
+      "Requirement already satisfied: six>=1.10.0 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.11.0)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from zipline===1.2.0->-r requirements.txt (line 1)) (1.1.3)\n",
+      "Requirement already satisfied: python-editor>=0.3 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from alembic>=0.7.7->zipline===1.2.0->-r requirements.txt (line 1)) (1.0.4)\n",
+      "Requirement already satisfied: requests-ftp in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from pandas-datareader<0.6,>=0.2.1->zipline===1.2.0->-r requirements.txt (line 1)) (0.3.1)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests>=2.9.1->zipline===1.2.0->-r requirements.txt (line 1)) (3.0.4)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests>=2.9.1->zipline===1.2.0->-r requirements.txt (line 1)) (1.22)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests>=2.9.1->zipline===1.2.0->-r requirements.txt (line 1)) (2.6)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (from requests>=2.9.1->zipline===1.2.0->-r requirements.txt (line 1)) (2020.12.5)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: No bundle registered with the name 'eod-quotemedia'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.executable} -m zipline ingest -b eod-quotemedia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy==1.16.1 in /Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages (1.16.1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.executable} -mpip install numpy==1.16.1"
    ]
   },
   {
@@ -50,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/prabathpeiris/opt/anaconda3/envs/finance/lib/python3.6/site-packages/ipykernel_launcher.py:8: UserWarning: Overwriting bundle with name 'eod-quotemedia'\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "from zipline.data import bundles\n",
     "from zipline.data.bundles.csvdir import csvdir_equities\n",
@@ -90,9 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "no data for bundle 'eod-quotemedia' on or before 2020-12-28 23:44:16.511247+00:00\nmaybe you need to run: $ zipline ingest -b eod-quotemedia",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m~/opt/anaconda3/envs/finance/lib/python3.6/site-packages/zipline/data/bundles/core.py\u001b[0m in \u001b[0;36mmost_recent_data\u001b[0;34m(bundle_name, timestamp, environ)\u001b[0m\n\u001b[1;32m    479\u001b[0m             candidates = os.listdir(\n\u001b[0;32m--> 480\u001b[0;31m                 \u001b[0mpth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbundle_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menviron\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    481\u001b[0m             )\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/Users/prabathpeiris/Dropbox/Udacity/artificial-intelligence-for-trading/quiz/m4_multifactor_models/Zipline Pipeline/../../data/project_4_eod/data/eod-quotemedia'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-821f993ece05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Load the data bundle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mbundle_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbundles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbundle_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/envs/finance/lib/python3.6/site-packages/zipline/data/bundles/core.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(name, environ, timestamp)\u001b[0m\n\u001b[1;32m    519\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtimestamp\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m             \u001b[0mtimestamp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTimestamp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutcnow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 521\u001b[0;31m         \u001b[0mtimestr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmost_recent_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimestamp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0menviron\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menviron\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    522\u001b[0m         return BundleData(\n\u001b[1;32m    523\u001b[0m             asset_finder=AssetFinder(\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/finance/lib/python3.6/site-packages/zipline/data/bundles/core.py\u001b[0m in \u001b[0;36mmost_recent_data\u001b[0;34m(bundle_name, timestamp, environ)\u001b[0m\n\u001b[1;32m    495\u001b[0m                 'maybe you need to run: $ zipline ingest -b {bundle}'.format(\n\u001b[1;32m    496\u001b[0m                     \u001b[0mbundle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbundle_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 497\u001b[0;31m                     \u001b[0mtimestamp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    498\u001b[0m                 ),\n\u001b[1;32m    499\u001b[0m             )\n",
+      "\u001b[0;31mValueError\u001b[0m: no data for bundle 'eod-quotemedia' on or before 2020-12-28 23:44:16.511247+00:00\nmaybe you need to run: $ zipline ingest -b eod-quotemedia"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -560,9 +670,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
